Fixing dark mode button position and state when page is refreshed

--- a/styles.css
+++ b/styles.css
@@ -37,7 +37,7 @@ body {
     flex-direction: row;
     gap: 3em;
     justify-content: center;
-    padding: 2em 1em;
+    padding: 1em;
 }
 
 .links-container > a {
@@ -109,6 +109,12 @@ body {
     background-color: whitesmoke;
     font-weight: bolder;
     color: black;
+}
+
+.personal-info {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .content-container {
